fix: align resource placeholder text to center

--- a/src/styles/isomer-template.scss
+++ b/src/styles/isomer-template.scss
@@ -12130,6 +12130,7 @@ a.navbar-item {
         font-family: Lato,sans-serif;
         line-height: 4.8rem;
         margin: 1rem;
+        text-align: center;
     }
 
     .watermark-text-content {
@@ -12139,6 +12140,7 @@ a.navbar-item {
         font-style: italic;
         font-family: Lato,sans-serif;
         line-height: 2rem;
+        text-align: center;
     }
 }
 
